--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,8 @@ h2 {
 
 .level:not(:last-child) {
   margin-bottom: 0px;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: bolder;
 }
 
 #city.input.is-danger {
@@ -42,6 +44,11 @@ h2 {
   border-color: #9e270a;
   border-radius: 0;
 }
+
+#errorMsg {
+  text-align: center;
+}
+
 
 #search-btn.button {
   background-color: #9e270a;
